test/libsolidity/syntaxTests/nameAndTypeResolution/567_require_visibility_specifiers.sol
contract C {
    function f() pure { }
}
// ----
// SyntaxError: (17-38): No visibility specified.
